--- a/roles/start_matrix/tasks/main.yml
+++ b/roles/start_matrix/tasks/main.yml
@@ -194,6 +194,50 @@
     purge_networks: true
     restart_policy: unless-stopped
 
+- name: Generate Matrix bot's configuration
+  template:
+    src: 'bot_config.yaml.j2'
+    dest: "{{ services.volumes.src.base }}\
+           {{ services.volumes.src.persistent }}\
+           {{ services.containers.matrix_bot.volumes.data.path }}\
+           /config.yaml"
+    owner: '1337'
+    group: '1337'
+    mode: '0644'
+
+- name: Generate Matrix bot's dynamic Traefik configuration
+  template:
+    src: 'matrix_bot.toml.j2'
+    dest: "{{ services.volumes.src.base }}\
+           {{ services.volumes.src.generated }}\
+           {{ services.containers.traefik.volumes.dynamic.path }}/matrix_bot.toml"
+    mode: '0444'
+
+- name: Start Matrix bot container
+  community.general.docker_container:
+    container_default_behavior: 'no_defaults'
+    detach: true
+    hostname: '{{ services.containers.matrix_bot.name }}'
+    image: '{{ services.containers.matrix_bot.image }}'
+    log_driver: '{{ services.log.driver }}'
+    log_options: '{{ services.log.options }}'
+    mounts:
+      - type: bind
+        source: "{{ services.volumes.src.base }}\
+                 {{ services.volumes.src.persistent }}\
+                 {{ services.containers.matrix_bot.volumes.data.path }}"
+        target: '/data'
+        read_only: false
+    name: '{{ services.containers.matrix_bot.name }}'
+    networks:
+      - name: '{{ services.network }}'
+        aliases:
+          - '{{ services.containers.matrix_bot.name }}'
+    networks_cli_compatible: false
+    pull: true
+    purge_networks: true
+    restart_policy: unless-stopped
+
 - name: Generate Element's dynamic Traefik configuration
   template:
     src: 'element.toml.j2'
