--- a/roles/start_traefik/tasks/main.yml
+++ b/roles/start_traefik/tasks/main.yml
@@ -26,7 +26,7 @@
            /{{ item.name }}"
     mode: '0444'
   loop:
-    - {name: 'security_headers.toml'}
+    - {name: 'security-headers.toml'}
     - {name: 'tls.toml'}
 
 - name: Start Traefik container
