misc: downgrade gitlab
Signed-off-by: Gabriel Duque <gabriel.duque@epita.fr>

--- a/roles/create_networks/tasks/main.yml
+++ b/roles/create_networks/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 
 - name: Create Docker networks
-  community.general.docker_network:
+  community.docker.docker_network:
     attachable: true
     scope: local
     name: '{{ services.network }}'
