--- a/roles/start_traefik/handlers/main.yml
+++ b/roles/start_traefik/handlers/main.yml
@@ -1,7 +1,7 @@
 ---
 
 - name: Restart Traefik container
-  community.general.docker_container:
+  community.docker.docker_container:
     name: '{{ services.containers.traefik.name }}'
     state: started
     restart: true
