--- a/roles/start_wireguard/handlers/main.yml
+++ b/roles/start_wireguard/handlers/main.yml
@@ -1,7 +1,7 @@
 ---
 
 - name: Restart WireGuard container
-  community.general.docker_container:
+  community.docker.docker_container:
     name: '{{ services.containers.wireguard.name }}'
     state: started
     restart: true
